ibsys.pps/manifests/gui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pps-frontend
  template:
    metadata:
      labels:
        app: pps-frontend
    spec:
      containers:
        - name: gui
          image: ibsys2group4registry.azurecr.io/ibsys-gui:v2.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pps-frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: pps-frontend
