ibsys.pps/manifests/pps-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pps-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pps-backend
  template:
    metadata:
      labels:
        app: pps-backend
    spec:
      containers:
        - name: pps
          image: ibsys2group4registry.azurecr.io/pps-backend-net5:v1.5
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pps-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: pps-backend
